# delivery

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: alembic.ini
src/delivery/: .env  database.py  main.py
src/delivery/config/: celery_config.py  redis_config.py
src/delivery/core/: celery_tasks.py  sessions.py
src/delivery/dao/: base.py
src/delivery/migrations/: env.py
src/delivery/migrations/versions/: 1dc0505471ca_initial_migration2.py  29451ce8b7c0_.py  4180954b4b2f_initial_migration.py  bf4f65067bd5_add_shipping_cost_field.py
src/delivery/parcels/: dao.py  models.py  rourets.py  schemas.py
