[tool.poetry]
name = "delivery"
version = "0.1.0"
description = "Описание вашего проекта"
authors = ["Яна Каюкова <kayukova.y0303@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = { version = ">=0.115.11,<0.116.0", extras = ["all"] }
sqlalchemy = { version = ">=2.0.38,<3.0.0" }
asyncpg = { version = ">=0.30.0,<0.31.0" }
alembic = { version = ">=1.15.1,<2.0.0" }
redis = { version = ">=5.2.1,<6.0.0" }
celery = {extras = ["asyncio"], version = "^5.4.0"}
dotenv = { version = ">=0.9.9,<0.10.0" }
requests = { version = ">=2.32.3,<3.0.0" }
aioredis = { version = ">=2.0.1,<3.0.0" }
aiohttp = { version = ">=3.11.13,<4.0.0" }
asgiref = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
